Fix for ODBC-11:   Due to server bug MDEV-5273 we can't get result set metadata after prepare for each statement.   Statements like SHOW or CALL procedure name will return metadata after execute. In latter case   the number of columns after execute will change and we need to set the ird metadata.